add get metrics
